--- a/index.html
+++ b/index.html
@@ -58,11 +58,22 @@
         <h3>Idiomas</h3>
 
         <table>
+            <!-- cabeçalho da tabela -->
+            <thead>
 
             <tr>
                 <th>Idiomas</th>
                 <th>Nível</th>
             </tr>
+            </thead>
+
+            <!-- corpo da tabela -->
+            <tbody>
+
+                <tr>
+                    <td>Português (Brasil)</td>
+                    <td>Nativo</td>
+                </tr>
 
             <tr>
                 <td>Inglês</td>
@@ -74,22 +85,31 @@
                 <td>Básico</td>
             </tr>
 
+        </tbody>
+
+        <!-- rodapé da tabela -->
+            <tfoot>
+                <tr>
+                    <td>TOTAL</td>
+                    <td>2</td>
+                </tr>
+            </tfoot>
         </table>
 
     </aside>
 
-    <section>
+    <section id="minhaCarreira">
         <h3>Minha carreira</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, omnis! Molestias minima quas voluptate iusto aliquam dolor nemo aliquid. Laudantium maxime deleniti ad voluptate, tempora doloremque cum doloribus iste harum eos. Aperiam quasi mollitia aliquid adipisci praesentium ducimus sapiente. Ex distinctio esse aut incidunt, eum facilis dolorem similique repellendus itaque?</p> <!-- pesquisar sobre lorem ipsum -->
     </section>
 
-    <section>
+    <section id="meusHobbies">
         <h3>Meus hobbies</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quo expedita esse, asperiores molestiae laudantium earum voluptate sequi, inventore aliquam voluptas harum, rerum ipsum provident. Ratione quasi eius maiores deleniti!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nesciunt odio vero suscipit? Sint architecto itaque magni saepe veniam numquam ex iste nobis molestias cumque accusantium molestiae, eos excepturi dolores.</p>
     </section>
 
-    <section>
+    <section id="artigos">
 
         <article>
             <header>
@@ -108,12 +128,12 @@
 
         <article>
             <header>
-                <h1>Aprenda HTML</h1>
+                <h1>Aprenda CSS</h1>
                 <p>Fernando Luiz</p>
                 <p>29 de fev 2024</p>
             </header>
             <main>
-                <p>Aprenda HTML consultando a documentação oficial do W3Schools e
+                <p>Aprenda CSS consultando a documentação oficial do MDN Web Docs e
                     construa seu primeiro...</p>
             </main>
             <footer>
@@ -122,6 +142,9 @@
         </article>
 
     </section>
+
+    <blockquote>Quem não erra, não aprende</blockquote>
+        <q>Quem ensina, aprende em dobro</q>
 
     <footer>
         <address>
